logo color changes with amount of columns

--- a/assets/css-appbody.scss.liquid
+++ b/assets/css-appbody.scss.liquid
@@ -1,7 +1,7 @@
-$cell: 16rem;
-$cell-margin: 0.5rem;
+$cell: {{ settings.cell }};
+$cell-margin: {{ settings.cell-margin }};
 $content-min-width: 2 * $cell + 3 * $cell-margin;
-$breakpoint: 480px;
+$breakpoint: {{ settings.breakpoint }};
 
 @media only screen
   and (max-device-width: $breakpoint) {
