--- a/assets/css-debug.scss.liquid
+++ b/assets/css-debug.scss.liquid
@@ -8,3 +8,19 @@
   // background-color: {{ settings.color-sidebar }};
   // background-color: lightgreen;
 }
+
+#autocenterbox {
+  // background-color: lightgreen;
+}
+
+#appheader {
+  // background-color: pink;
+}
+
+#appheader-left {
+  // background-color: orange;
+}
+
+#logotype {
+  // background-color: yellow;
+}
