refactoring, renamed some css

--- a/assets/css-colors.scss.liquid
+++ b/assets/css-colors.scss.liquid
@@ -89,7 +89,7 @@ a:hover {
 }
 
 /* Left Navigation */
-#sideBox h3 {
+#sidebarleft h3 {
   color: #333;
 }
 
@@ -196,12 +196,12 @@ h3.saverow {
   color: white;
 }
 
-#frontpage p.money {
+#frontbox p.money {
   color: #444;
 }
 
 /* Collection Pages */
-#collectionpage h1 {
+#collectionbox h1 {
   color: #4b4944;
   background-color: white;
 }
@@ -210,7 +210,7 @@ h3.saverow {
   background-color: MintCream;
 }
 
-#collectionpage h2 {
+#collectionbox h2 {
   color: #333;
 }
 
