--- a/assets/css-debug.scss.liquid
+++ b/assets/css-debug.scss.liquid
@@ -1,10 +1,10 @@
 /* DEBUG */
 
-#sideBox {
+#sidebarleft {
   // background-color: lightsalmon;
 }
 
-#mainBox {
+#mainbox {
   // background-color: {{ settings.color-sidebar }};
   // background-color: lightgreen;
 }
