--- a/assets/css-shop-typography.css
+++ b/assets/css-shop-typography.css
@@ -85,7 +85,7 @@ ul.leftlinks li a {
 }
 
 /* Products on the front page */
-/* #frontpage h3 {
+/* #frontbox h3 {
   font-size: 100%;
   line-height: 1.5em;
 } */
