--- a/snippets/sidebarleft.liquid
+++ b/snippets/sidebarleft.liquid
@@ -1,4 +1,4 @@
-<div id="sideBox">
+<div id="sidebarleft">
   <ul class="leftlinks" id="blend-border">
     <!-- list available collections  -->
     {% for link in linklists.main-menu.links %}
