--- a/templates/collection.liquid
+++ b/templates/collection.liquid
@@ -1,4 +1,4 @@
-<div id="collectionpage">
+<div id="collectionbox">
   {% paginate collection.products by 33 %}
 
   {% for product in collection.products %}
