--- a/snippets/sidebarright.liquid
+++ b/snippets/sidebarright.liquid
@@ -6,7 +6,7 @@
   }
 </script>
 
-<div id="sidebar-right">
+<div id="sidebarright">
   <div id="productcontrols">
     {% case product.type %}
       {% when 'App Store' %}
