--- a/templates/product.liquid
+++ b/templates/product.liquid
@@ -1,32 +1,15 @@
-  <script type="text/javascript">
-      $.noConflict();
-     jQuery(document).ready(function() {
-
-         /*
-        jQuery(".BUYbutton").attr("disabled","disabled");
-
-       jQuery('#variant-dropdown').change(function() {
-            var test = jQuery('#variant-dropdown').val();
-            if(test == "select_tee"){
-                jQuery(".BUYbutton").attr("disabled","disabled");
-            }
-
-            else{
-                jQuery(".BUYbutton").removeAttr("disabled");
-            }
-       });
-       */
-
-       jQuery('.BUYbutton').click(function(){
-            var test = jQuery('#variant-dropdown option:selected').val();
-            if(test == "select_tee"){
-                alert("Please select a size!");
-                return false;
-            }
-       });
-
+<script type="text/javascript">
+  $.noConflict();
+  jQuery(document).ready(function() {
+    jQuery('.BUYbutton').click(function(){
+      var test = jQuery('#variant-dropdown option:selected').val();
+      if(test == "select_tee"){
+        alert("Please select a size!");
+        return false;
+      }
     });
-  </script>
+  });
+</script>
 
 
 {% for collection in product.collections %}
@@ -36,7 +19,7 @@
 {% endfor %}
 
 
-<div id="productpage">    
+<div id="productpage">
     <div id="product-images">
 		{% for mytag in product.tags %}
 			{% if mytag == 'Signed' %}
@@ -88,7 +71,9 @@
 
 		<div id="pimage-select">
 			{% for image in product.images %}
-				<a href="#" onclick="displayImage({{ forloop.index }}, 'product-images');"><img src="{{ image | product_img_url: 'medium'}}" alt="{{product.title}}" /></a>
+        <div class="thumbnail">
+          <a href="#" onclick="displayImage({{ forloop.index }}, 'product-images');"><img src="{{ image | product_img_url: 'medium'}}" alt="{{product.title}}" /></a>
+        </div>
 			{% endfor %}
 		</div>
 	</div><!-- /#product-images -->
