font size fixes on product sidebar

--- a/assets/css-colors.scss.liquid
+++ b/assets/css-colors.scss.liquid
@@ -265,8 +265,8 @@ h3.saverow {
   /* overwrites default at css-shop-layout.css*/
 }
 
-.productleft h2,
-.productleftsold h2 {
+.producttopinfo h2,
+.producttopinfosold h2 {
   color: #3f3800;
 }
 
