--- a/assets/css-layout.scss.liquid
+++ b/assets/css-layout.scss.liquid
@@ -406,14 +406,10 @@ h3.saverow {
 
 #product-images {
   width: 100%;
-  // display: table;
 }
 
 .bigsquare {
   width: 100%;
-  // margin: $cell-margin;
-  // height: 660px;
-  // border: 0 solid #ccc;
 }
 
 a.productimage {
@@ -495,14 +491,14 @@ ul#variants li label {
 
 #description {
   display: table;
-  width: 198px;
-  padding-top: 12px;
+  width: 100%;
+  padding-top: 2rem;
   border-top: 1px lightgrey solid;
-  margin: 24px 0 0 0;
+  margin: 2rem 0 0 0;
 }
 
 #description p {
-  margin: 0 0 0.5em 0;
+  margin: 0 0 $cell-margin 0;
 }
 
 #productlinks {
@@ -520,14 +516,13 @@ ul#variants li label {
 }
 
 #productcontrols {
-  width: 198px;
+  width: 100%;
   padding: 0;
   margin: 0;
-  display: table;
 }
 
-.productleft,
-.productleftsold {
+.producttopinfo,
+.producttopinfosold {
   width: 100%;
 }
 
