--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -49,8 +49,8 @@
   {{ 'css-sidebarleft.scss.css' | asset_url | stylesheet_tag }}
   {{ 'css-colors.scss.css' | asset_url | stylesheet_tag }}
   {{ 'css-colors-background.scss.css' | asset_url | stylesheet_tag }}
+  {{ 'css-shop-typography.scss.css'| asset_url | stylesheet_tag }}
 
-  {{ 'css-shop-typography.css'| asset_url | stylesheet_tag }}
   {{ 'css-shop-icons.css' | asset_url | stylesheet_tag }}
   {{ 'lightbox/v2/lightbox.css' | global_asset_url | stylesheet_tag }}
   {{ 'lightbox/v2/lightbox.js' | global_asset_url | script_tag }}
