product related products properly show up at bottom
- added appfooter element
- greyed out related products

--- a/assets/css-debug.scss.liquid
+++ b/assets/css-debug.scss.liquid
@@ -28,3 +28,7 @@
 #productbox {
   // background-color: rgba(255, 10, 255, 0.5);
 }
+
+#productrelated {
+  // background-color: rgba(255, 10, 255, 0.5);
+}
