--- a/snippets/productrelated.liquid
+++ b/snippets/productrelated.liquid
@@ -1,5 +1,6 @@
-<div id="related">
+<div id="productrelated">
   <h2>Other Fine eBoy Products</h2>
+  <hr>
   {% case product.type %}
     {% when 'Poster' %}
       {% assign recommendation = 'notposter' %}
@@ -22,5 +23,4 @@
     {% include 'galleryproduct' %}
   {% endfor %}
   </div>
-
 </div>
