--- a/assets/css-layout.scss.liquid
+++ b/assets/css-layout.scss.liquid
@@ -57,7 +57,7 @@ hr {
   padding: 0;
   margin: 1rem 0 1rem 0;
   height: 1px;
-  background-image: linear-gradient(to right, #00baf2, white);
+  background-image: linear-gradient(to right, #00baf2, rgba(255,255,255,0));
 }
 
 /* Home Page */
@@ -610,18 +610,35 @@ ul#variants li label {
   content: "\2197";
 }
 
-/* Product Page - Related */
-#related {
-  margin: 0;
-  border-top: 1px lightgrey dotted;
-  margin-top: $cell-margin * 2;
-}
-
-#related h2 {
-  margin: 0 $cell-margin * 0.5;
-}
-
 /* Footer */
+#appfooter {
+  background-color: rgba(255,255,255,0.93);
+  padding: 0;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+    #productrelated {
+      margin: $cell-margin * 2 0 0 0;
+      padding: $cell-margin * 0.5;
+
+      hr {
+        background-image: linear-gradient(to right, #383521, rgba(255,255,255,0));
+        opacity: 0.3;
+        margin: $cell-margin * 2 0 $cell-margin * 0.5 0
+      }
+      h2 {
+        margin: $cell-margin * 2 $cell-margin * 0.5;
+        color: #383521;
+        font-weight: 500;
+        opacity: 0.4;
+      }
+      img {
+        filter: grayscale(100%) opacity(0.75);
+      }
+    }
+}
+
 #footer {
   margin: 0;
   clear: left;
