bold font update and warm background color for appbody

--- a/assets/css-shop-typography.scss.liquid
+++ b/assets/css-shop-typography.scss.liquid
@@ -1,7 +1,8 @@
 $fontsize-leftlinks: {{ settings.fontsize-sidebar-big }};
 $fontweight-leftlinks: {{ settings.fontweight-sidebar-big }};
 $fontsize-producttopinfo: {{ settings.fontsize-sidebar-big }};
-$fontweight-producttopinfo: {{ settings.fontweight-sidebar-big }};
+$fontweight-producttopinfo: {{ settings.fontweight-bold-big }};
+
 
 /*eBoy SHOP-TYPOGRAPHY CSS*/
 @font-face {
@@ -13,6 +14,10 @@ $fontweight-producttopinfo: {{ settings.fontweight-sidebar-big }};
 body {
   font-family: "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 1rem;
+}
+
+b {
+  font-weight: 500;
 }
 
 a,
