--- a/assets/css-colors-background.scss
+++ b/assets/css-colors-background.scss
@@ -8,5 +8,6 @@ html {
 // }
 
 #appbody {
-  background-color: rgba(255, 255, 255, 0.9);
+  // background-color: rgba(255, 255, 255, 0.9);
+  background-color: rgb(253, 250, 244);
 }
