hide left sidebar when on cart page

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -91,6 +91,10 @@
               {{ content_for_layout }}
             </div>
             {% include 'sidebarright' %}
+          {% when 'cart' %}
+            <div id="mainbox">
+              {{ content_for_layout }}
+            </div>
           {% else %}
             {% include 'sidebarleft' %}
             <div id="mainbox">
