flexible width and updated buttons for cart css

--- a/assets/css-colors.scss.liquid
+++ b/assets/css-colors.scss.liquid
@@ -5,7 +5,7 @@ $breakpoint: {{ settings.breakpoint }};
 $color-header: {{ settings.color-header }};
 $color-header-link: rgba(0, 230, 230, 0.6);
 $color-logo: {{ settings.color-logo }};
-$color-link: dodgerblue;
+$color-link: {{ settings.color-link }};
 $color-sidebox-text: {{ settings.color-sidebox-text }};
 $color-sidebox-link: {{ settings.color-sidebox-link }};
 $color-black: #383521;
