--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -50,6 +50,7 @@
   {{ 'css-colors.scss.css' | asset_url | stylesheet_tag }}
   {{ 'css-colors-background.scss.css' | asset_url | stylesheet_tag }}
   {{ 'css-typography.scss.css'| asset_url | stylesheet_tag }}
+  {{ 'css-buttons.scss.css'| asset_url | stylesheet_tag }}
   {{ 'css-cart.scss.css'| asset_url | stylesheet_tag }}
 
   {{ 'css-shop-icons.css' | asset_url | stylesheet_tag }}
