--- a/assets/css-cart.scss.liquid
+++ b/assets/css-cart.scss.liquid
@@ -1,3 +1,5 @@
+// $fontsize-button-small: {{ settings.fontsize-button-small }};
+
 form {
   width: 100%;
   padding: 0.5rem;
@@ -59,9 +61,9 @@ h3.saverow {
 }
 
 #line-items li .txtcartrow {
-  margin-top: 6px;
-  display: table;
-  width: 572px;
+  margin-top: 1rem;
+  // display: table;
+  // width: 572px;
   text-align: right;
 }
 
@@ -122,27 +124,9 @@ h3.saverow {
   cursor: pointer;
 }
 
-.updatebutton {
-  padding: 0;
-  border-width: 0;
-}
-
 .checkoutrow {
   text-align: right;
   margin-top: 24px;
-}
-
-.checkoutbutton {
-  width: 280px;
-  height: 34px;
-  padding: 0;
-  background: url(CHECKOUT-2x-01k.png) center top no-repeat;
-  background-size: 280px 34px;
-}
-
-.checkoutbutton:hover {
-  background: url(CHECKOUT-2x-01k-HOVER.png);
-  background-size: 280px 34px;
 }
 
 .checkoutrow label {
